# rust-sqlite-cms

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml
assets/: admin.css  admin.js
doc/: LAYOUT_SPEC.md  PLAN.md  SPEC.md
migrations/: 0001_init.sql  0002_add_carousel_widget.sql  0002_add_filter_json.sql  0002_image_widget.sql  0002_layouts.sql  0002_templates.sql  0002_user_table_meta.sql  0002_users.sql  0002_widgets.sql  0003_layout_favicon.sql  0003_templates_files.sql  0003_user_table_sort.sql  0003_widget_html_and_placeholder_config.sql  0003_widget_type_meta.sql  0003_widget_types_placeholders.sql  0004_add_widget_type_config_schema.sql  0004_pages.sql  0004_rename_user_table_meta.sql  0005_fix_widget_html_template_vars.sql  0005_media_public_url.sql  0006_drop_layout_is_default.sql
presets/: home_page.html  index.html  landing.html  news.html  shell.html  simple-page.html
presets/example/: site.css
presets/pages/: landing.html  news.html  simple-page.html
src/: config.rs  error.rs  lib.rs  main.rs  page_render.rs  presets.rs  session.rs  state.rs
src/api/: mod.rs
src/auth/: mod.rs
src/db/: mod.rs
src/dev/: mod.rs  reset.rs
src/media/: mod.rs
src/models/: layout.rs  media.rs  mod.rs  option.rs  page.rs  placeholder.rs  post.rs  template.rs  user.rs  widget.rs
src/repos/: layouts.rs  media.rs  mod.rs  options.rs  pages.rs  placeholders.rs  postmeta.rs  posts.rs  templates.rs  url_paths.rs  users.rs  widget_types.rs
src/routes/: mod.rs  public.rs  url.rs
src/samples/: conflict.rs  mod.rs
src/services/: backup.rs  contact_form.rs  database.rs  layout_publish.rs  layouts.rs  media.rs  mod.rs  options.rs  pages.rs  placeholders.rs  (+3 more)
tests/: admin_auth.rs  admin_database.rs  admin_users.rs  api_auth.rs  api_smoke.rs  backup_export_import.rs  common.rs  contact_form.rs  layout_favicon.rs  layout_publish_swap.rs  layout_static_files.rs  layouts_export_import.rs  media_public_url.rs  placeholders_delete.rs  posts_trash.rs  preview_edit_mode.rs  samples_install.rs  services_pages.rs  widgets_export_import.rs  widgets_html.rs
(+99 files in other folders)
