[package]
name = "rust-sqlite-cms"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
askama = "0.16.0"
axum = "0.8.9"
chrono = { version = "0.4.44", default-features = false, features = ["serde", "clock"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
minijinja = { version = "2.20.0", features = ["loader"] }
minijinja-autoreload = "2.20.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros", "derive", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
