[package]
name = "rust-sqlite-cms"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argon2 = { version = "0.5.3", features = ["std"] }
rand = "0.8.5"
base64 = "0.22.1"
getrandom = "0.3.3"
askama = "0.16.0"
axum = { version = "0.8.9", features = ["multipart"] }
chrono = { version = "0.4.44", default-features = false, features = ["serde", "clock"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
minijinja = { version = "2.20.0", features = ["loader"] }
minijinja-autoreload = "2.20.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros", "derive", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "0.8.23"
tower-http = { version = "0.6.11", features = ["fs"] }
urlencoding = "2.1.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tower-sessions = { version = "0.14", features = ["signed"] }
time = "0.3"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serde_json = "1.0"
tokio = { version = "1.52", features = ["full"] }
